fixing layout issue with Graph Type select was too wide, obscuring the help text or edit buttons
git-svn-id: https://openclerk.googlecode.com/svn/trunk@822 b12a1112-ca08-e5dd-f792-535eff3abf3b

--- a/default.css
+++ b/default.css
@@ -250,6 +250,7 @@ span.beta { color: #666; font-size: 75%; text-shadow: 1px 1px 1px black; }
 .editing_enabled .graph { min-height: 80px; min-width: 245px; } /* make it easier to edit small graphs; editing graphs should now cover at least the edit controls */
 
 #page_profile .add_graph { clear: both; }
+#page_profile .add_graph #graph_type, #page_profile .edit_target #graph_type { width: 100%; }
 #page_profile .add_graph #graph_type option, #page_profile .edit_target #graph_type option { padding-left: 10px; }
 #page_profile .add_graph #graph_type option.category, #page_profile .edit_target #graph_type option.category { padding: 2px 5px; font-size: 90%; background: #ccc; font-weight: bold; }
 .graph_controls { display: none; }
